# easyCCD

./: .gitignore  AGENTS.md  A方案里程碑清单.md  MVP执行规划.md  README.md  pyproject.toml  requirements.txt  执行规划.md  需求文档.md
docs/plans/: 2026-03-25-filter-module-design.md
src/: main.py
src/comm/: serial_manager.py
src/core/: filter_pipeline.py  threshold.py
src/core/filters/: __init__.py  base.py  gaussian.py  mean.py  median.py
src/ui/: main_window.py
src/ui/controllers/: __init__.py  filter_controller.py  playback_controller.py  recording_controller.py  serial_controller.py  threshold_controller.py
src/ui/widgets/: binary_preview_widget.py  data_table_widget.py  raw_stream_widget.py  waveform_widget.py
src/utils/: mock_data_generator.py
tests/: test_binary_preview_widget.py  test_filter_controller.py  test_playback_csv_parsing.py  test_recording_workflow.py  test_serial_nonblocking.py  test_threshold_algorithm.py
